# speech-core

./: .gitignore  Cargo.toml  README.md  shell.nix
.beads/: config.yaml  issues.jsonl
crates/speech-core-daemon/: Cargo.toml  build.rs
crates/speech-core-daemon/native/: transcribe_shim.cpp  transcribe_shim.h
crates/speech-core-daemon/src/: jsonl_logger.rs  main.rs  model.rs  provenance.rs
crates/speech-core-daemon/src/detectors/: mod.rs  parakeet_eou.rs  smart_turn.rs  turn.rs  vad.rs
crates/speech-core-file-adapter/: Cargo.toml
crates/speech-core-file-adapter/src/: main.rs
crates/speech-core-mic-adapter/: Cargo.toml
crates/speech-core-mic-adapter/src/: main.rs
crates/speech-core-protocol/: Cargo.toml
crates/speech-core-protocol/src/: lib.rs
crates/speech-core-watch/: Cargo.toml
crates/speech-core-watch/src/: main.rs
crates/speech-out/: Cargo.toml
crates/speech-out/src/: main.rs
docs/: assistant-self-asr-eval.md  barge-in-dual-asr.md  current-state.md  golden-suite-spec.md  seams.md  session-handoff.md  smart-turn-v3.md  speech-output.md  sts-peek-audio.md  sts-peek-cut.md  sts-peek-ui.md  turn-detection.md
laptop-audio/: README-dpdfnet2-denoise.md  README.md  aec-diagnose.sh  aec-toggle.sh  dpdfnet-mic.sh  dpdfnet-test.sh  dpdfnet-toggle.sh  install-sway-bind.sh  mic-denoise.py  sfnix-mic-denoise.py  test_dpdfnet_perf.py
scripts/: README-golden-assert.md  analyze-session-timeline.py  assistant-self-asr-finalize-cut.py  assistant-self-asr-harness.py  assistant_self_asr_cut.py  assistant_self_asr_tts_eval.py  assistant_self_asr_tui.py  barge-in-dual-asr.py  install-sfnix-client.sh  install-sfub-daemon.sh  install-speech-core-client.sh  install-speech-core-daemon.sh  sfnix-live-session.sh  sfnix-sync-build-adapter.sh  sfub-start-nemotron-daemon.sh  speech-core-dictation-run.sh  speech-core-dictation-toggle.sh  speech-core-golden  speech-core-golden-assert.py  speech-core-golden.py  speech-core-live-session.sh  speech-core-sync-build-adapter.sh  speech-out-diagnostics.py  speech-out-live-session.sh  speech-out-tee-play.sh  speech-talker-session.sh  speech_talker_session.py  start-speech-core-daemon.sh  synthetic-turn-eval.sh  test_speech_talker_session.py
scripts/_golden/: __init__.py  assert_engine.py  capture.py  constants.py  report.py  validity.py
scripts/barge-in-dual-asr/: __init__.py  cut.py  feed_assistant_asr.py  live_wiring.py  record_client.py  simulator.py
scripts/barge_in_align/: __init__.py  align_worker.py  backend.py  ctc_forced.py  perf_probe.py  run_align.py
scripts/sts-peek/: __init__.py  audio.py  cut.py  cut_coord.py  keys.py  run_audio.py  run_cut.py  run_ui.py  session.py  ui.py
tests/: test-assistant-self-asr-harness.sh  test-barge-in-dual-asr.sh  test-speech-out-live-session-topology.sh  test-speech-out-live-session.sh  test-speech-out-playback-supervision.sh  test-sts-peek-audio.sh  test-sts-peek-cut.sh  test-sts-peek-ui.sh
tests/golden/: manifest.yaml  test_golden.py  test_operator.py
tests/golden/legacy/: quarantine-report.yaml
tests/golden/profiles/golden-mvp/: profile.yaml
tests/golden/scenarios/: human-clean-complete.yaml  human-hold-continuous-filler-7000.yaml  human-hold-continuous-filler-7500.yaml  human-pause-resume-incomplete.yaml  human-rapid-question.yaml  human-trailing-off.yaml
