[workspace]
members = [
    "crates/speech-core-protocol",
    "crates/speech-core-daemon",
    "crates/speech-core-mic-adapter",
    "crates/speech-core-file-adapter",
    "crates/speech-core-watch",
    "crates/speech-out",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/speech-core"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hound = "3.5"
libc = "0.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24"] }
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.23"
tungstenite = "0.23"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parakeet-rs = { path = "vendor/parakeet-rs" }
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
