[package]
name = "speech-core-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
speech-core-protocol = { path = "../speech-core-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.10"
