[package]
name = "speech-core-file-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
hound.workspace = true
serde_json.workspace = true
speech-core-protocol = { path = "../speech-core-protocol" }
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
