[package]
name = "speech-out"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
speech-core-protocol = { path = "../speech-core-protocol" }
tokio = { workspace = true, features = ["io-std", "process"] }
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
